// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots AboutPage about page 1`] = `
<div
  className="mn"
>
  <div>
    <div
      className="mn css-kchujm"
    >
      <div
        className="b"
      >
        <div
          className="b-c"
        >
          <div
            className="sh sh--y"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <h2
                className="sh-title"
              >
                About this Project
              </h2>
            </a>
          </div>
          <div
            className="g"
          >
            <div
              className="g--6 css-1f72rj8"
            >
              <p>
                The City of Boston is redesigning its 311 web interface, and we need your help! One major new change will be that rather than requiring the user to guess which of the dozens of internal case types their issue fits into, we’re going to instead ask them to simply tell us in their own words what’s wrong, in a sentence or less. We’ll then use a predictive model to suggest a few case types that we the issue might fall under, and the user can click on one to be taken to the right form.
              </p>
              <p>
                The model we’re building functions basically like a search engine, but is customized for this specific application. It will be created from a training dataset of how other users have describes their own issues in the past, from which the model learns what words and phrases are most common when talking about different case types. We’ll improve the model over time by adding more examples to that training dataset, and the model will even adapt to changes in the pattern of incoming cases — for example, by recognizing that snow-related case types typically come in batches (
                <i>
                  i.e.
                </i>
                , during and after a storm), and thus automatically making those suggestions more likely to be shown when we’ve received a spike in snow cases.
              </p>
              <p>
                The one problem with this idea? Because the system doesn’t exist yet, we don’t actually have a training dataset of case descriptions to start from. We could substitute users’ general case descriptions from the current system, but that wouldn’t cover every case type or be exactly what we’re looking for, so we need more. And that’s where you come in!
              </p>
              <p>
                On this site, we’ll present a series of case types that we have in our system, and want you to give us examples in your own words of how you would describe a real-world situation where you’d submit a case. So for example, for the case type:
              </p>
              <p>
                “DEAD ANIMAL PICK-UP”
              </p>
              <p>
                you might describe a case of this type by saying:
              </p>
              <p>
                “There’s a dead squirrel in front of my house” 
              </p>
              <p>
                or:
              </p>
              <p>
                “A stray cat died in the alleyway and it’s starting to stink”
              </p>
              <p>
                To get started, click the “Take me to the form” button below. You will be shown a name and definition for a randomly-chosen service request type, then asked to provide up to 3 examples of ways you would describe a case of that type. Don’t worry about grammar, spelling, or any of that — we just want a variety of examples of what people would say on a web form — and you don’t need to fill out all 3 if you can’t think anything. Also, if you don’t understand what the case type definition means, just click “Submit” and move on to the next one.
              </p>
              <p>
                After submitting your examples, you can stop, or get another case type to describe. We ask that users spend about 10 minutes on this, but if you find it interesting and want to do more, that’s great!
              </p>
              <p>
                Thanks in advance for your help making 311 better. Now, let’s get started!
              </p>
            </div>
            <div
              className="g--6 css-3l0yqg"
            >
              <div
                className="ta-c"
              >
                <a
                  className="btn"
                  href="/form"
                  onClick={[Function]}
                >
                  Take me to the form!
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer
      className="ft"
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    <div class=\\"ft-c\\">
      <ul class=\\"ft-ll ft-ll--r\\">
        <li class=\\"ft-ll-i\\"><a href=\\"http://www.cityofboston.gov/311/\\" class=\\"ft-ll-a lnk--yellow\\"><span class=\\"ft-ll-311\\">BOS:311</span><span class=\\"tablet--hidden\\"> - </span>Report an issue</a></li>
      </ul>
      

<ul class=\\"ft-ll\\"><li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/innovation-and-technology/privacy-and-security-statement\\" target=\\"_blank\\" title=\\"\\" class=\\"ft-ll-a\\">Privacy Policy</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/human-resources/career-center\\" title=\\"\\" class=\\"ft-ll-a\\">Careers</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/mayors-office/contact-boston-city-hall\\" title=\\"\\" class=\\"ft-ll-a\\">Contact us</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/digital-team/city-boston-alerts-and-notifications\\" title=\\"\\" class=\\"ft-ll-a\\">Alerts and notifications</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/public-records\\" title=\\"\\" class=\\"ft-ll-a\\">Public records requests</a></li>
</ul>    </div>
  ",
        }
      }
      style={
        Object {
          "position": "relative",
          "zIndex": 2,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots FormPage error 1`] = `
<div
  className="mn"
>
  <div>
    <div
      className="mn css-kchujm"
    >
      <div
        className="b"
      >
        <div
          className="b-c"
        >
          <div
            className="sh sh--y"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <h2
                className="sh-title"
              >
                Help teach the new BOS:311
              </h2>
            </a>
          </div>
          <div
            className="t--intro m-v300"
          >
            Please make up 3 situations that could be solved by reporting:
          </div>
          <div
            className="p-a500 m-v500 css-174pr51"
          >
            <div
              className="t--intro"
            >
              <strong>
                Dead Animal Pick-up on Public Way
              </strong>
            </div>
            <div
              className="t--info"
            >
              Remove a dead animal from a public street or sidewalk.
            </div>
            <div
              className="t--info  css-cfrxbd"
            >
              <a
                href="javascript:void(0)"
                onClick={[Function]}
              >
                I don’t understand this service
              </a>
            </div>
          </div>
          <div
            className="g"
          >
            <div
              className="g--6"
            >
              <div
                className="g--12 m-b500"
              >
                <label
                  className="stp m-v200"
                  htmlFor="description-1"
                >
                  <span
                    className="stp-number"
                    style={
                      Object {
                        "lineHeight": 1.2,
                      }
                    }
                  >
                    1
                  </span>
                   
                  What can we help with?
                </label>
                <div
                  className="txt"
                >
                  <textarea
                    className="txt-f css-5axqd"
                    id="description-1"
                    onChange={[Function]}
                    rows="3"
                    value=""
                  />
                </div>
              </div>
              <div
                className="g--12 m-b500"
              >
                <label
                  className="stp m-v200"
                  htmlFor="description-2"
                >
                  <span
                    className="stp-number"
                    style={
                      Object {
                        "lineHeight": 1.2,
                      }
                    }
                  >
                    2
                  </span>
                   
                  What can we help with?
                </label>
                <div
                  className="txt"
                >
                  <textarea
                    className="txt-f css-5axqd"
                    id="description-2"
                    onChange={[Function]}
                    rows="3"
                    value=""
                  />
                </div>
              </div>
              <div
                className="g--12 m-b500"
              >
                <label
                  className="stp m-v200"
                  htmlFor="description-3"
                >
                  <span
                    className="stp-number"
                    style={
                      Object {
                        "lineHeight": 1.2,
                      }
                    }
                  >
                    3
                  </span>
                   
                  What can we help with?
                </label>
                <div
                  className="txt"
                >
                  <textarea
                    className="txt-f css-5axqd"
                    id="description-3"
                    onChange={[Function]}
                    rows="3"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="g--6 css-1x739n4"
            >
              <ul
                className="ul css-1r1mokn"
              >
                <li
                  className="css-3ht2du"
                >
                  Describe each scenario as if you were typing an answer to the question “what can we help with?”
                </li>
                <li
                  className="css-3ht2du"
                >
                  Use different words for each description. For example, if you say “crack in the road” for one, use “hole in the street” for another.
                </li>
                <li
                  className="css-3ht2du"
                >
                  Don’t worry too much about grammar or spelling. Be natural!
                </li>
                <li
                  className="css-3ht2du"
                >
                  If you can’t come up with 3 different ones, that’s okay! Write as much as you can, and then click submit.
                </li>
              </ul>
            </div>
          </div>
          <div
            className="g"
          >
            <div
              className="g--4 css-1vvidun"
            >
              <span
                className="t--info t--err"
              >
                Unfortunately, we could not save those descriptions. Please try again!
              </span>
            </div>
            <div
              className="g--2"
            >
              <button
                className="btn css-1mfq5q8"
                disabled={true}
                onClick={[Function]}
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
          <p
            className="t--subinfo"
            style={
              Object {
                "marginTop": "8rem",
              }
            }
          >
            The City of Boston may use, distribute, reproduce, modify, adapt, and publicly display content you submit for the purpose of improving City services and related efforts. Submitted content is also subject to the provisions of
             
            <a
              href="http://www.sec.state.ma.us/pre/preinformation.htm"
              rel="noopener noreferrer"
              target="_blank"
            >
              Massachusetts Public Records Law
            </a>
             
            and may be publicly released as open data under a
             
            <a
              href="https://opendatacommons.org/licenses/pddl/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Public Domain Dedication and License
            </a>
            .
          </p>
        </div>
      </div>
    </div>
    <footer
      className="ft"
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    <div class=\\"ft-c\\">
      <ul class=\\"ft-ll ft-ll--r\\">
        <li class=\\"ft-ll-i\\"><a href=\\"http://www.cityofboston.gov/311/\\" class=\\"ft-ll-a lnk--yellow\\"><span class=\\"ft-ll-311\\">BOS:311</span><span class=\\"tablet--hidden\\"> - </span>Report an issue</a></li>
      </ul>
      

<ul class=\\"ft-ll\\"><li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/innovation-and-technology/privacy-and-security-statement\\" target=\\"_blank\\" title=\\"\\" class=\\"ft-ll-a\\">Privacy Policy</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/human-resources/career-center\\" title=\\"\\" class=\\"ft-ll-a\\">Careers</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/mayors-office/contact-boston-city-hall\\" title=\\"\\" class=\\"ft-ll-a\\">Contact us</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/digital-team/city-boston-alerts-and-notifications\\" title=\\"\\" class=\\"ft-ll-a\\">Alerts and notifications</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/public-records\\" title=\\"\\" class=\\"ft-ll-a\\">Public records requests</a></li>
</ul>    </div>
  ",
        }
      }
      style={
        Object {
          "position": "relative",
          "zIndex": 2,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots FormPage initial form 1`] = `
<div
  className="mn"
>
  <div>
    <div
      className="mn css-kchujm"
    >
      <div
        className="b"
      >
        <div
          className="b-c"
        >
          <div
            className="sh sh--y"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <h2
                className="sh-title"
              >
                Help teach the new BOS:311
              </h2>
            </a>
          </div>
          <div
            className="t--intro m-v300"
          >
            Please make up 3 situations that could be solved by reporting:
          </div>
          <div
            className="p-a500 m-v500 css-174pr51"
          >
            <div
              className="t--intro"
            >
              <strong>
                Dead Animal Pick-up on Public Way
              </strong>
            </div>
            <div
              className="t--info"
            >
              Remove a dead animal from a public street or sidewalk.
            </div>
            <div
              className="t--info  css-cfrxbd"
            >
              <a
                href="javascript:void(0)"
                onClick={[Function]}
              >
                I don’t understand this service
              </a>
            </div>
          </div>
          <div
            className="g"
          >
            <div
              className="g--6"
            >
              <div
                className="g--12 m-b500"
              >
                <label
                  className="stp m-v200"
                  htmlFor="description-1"
                >
                  <span
                    className="stp-number"
                    style={
                      Object {
                        "lineHeight": 1.2,
                      }
                    }
                  >
                    1
                  </span>
                   
                  What can we help with?
                </label>
                <div
                  className="txt"
                >
                  <textarea
                    className="txt-f css-5axqd"
                    id="description-1"
                    onChange={[Function]}
                    rows="3"
                    value=""
                  />
                </div>
              </div>
              <div
                className="g--12 m-b500"
              >
                <label
                  className="stp m-v200"
                  htmlFor="description-2"
                >
                  <span
                    className="stp-number"
                    style={
                      Object {
                        "lineHeight": 1.2,
                      }
                    }
                  >
                    2
                  </span>
                   
                  What can we help with?
                </label>
                <div
                  className="txt"
                >
                  <textarea
                    className="txt-f css-5axqd"
                    id="description-2"
                    onChange={[Function]}
                    rows="3"
                    value=""
                  />
                </div>
              </div>
              <div
                className="g--12 m-b500"
              >
                <label
                  className="stp m-v200"
                  htmlFor="description-3"
                >
                  <span
                    className="stp-number"
                    style={
                      Object {
                        "lineHeight": 1.2,
                      }
                    }
                  >
                    3
                  </span>
                   
                  What can we help with?
                </label>
                <div
                  className="txt"
                >
                  <textarea
                    className="txt-f css-5axqd"
                    id="description-3"
                    onChange={[Function]}
                    rows="3"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="g--6 css-1x739n4"
            >
              <ul
                className="ul css-1r1mokn"
              >
                <li
                  className="css-3ht2du"
                >
                  Describe each scenario as if you were typing an answer to the question “what can we help with?”
                </li>
                <li
                  className="css-3ht2du"
                >
                  Use different words for each description. For example, if you say “crack in the road” for one, use “hole in the street” for another.
                </li>
                <li
                  className="css-3ht2du"
                >
                  Don’t worry too much about grammar or spelling. Be natural!
                </li>
                <li
                  className="css-3ht2du"
                >
                  If you can’t come up with 3 different ones, that’s okay! Write as much as you can, and then click submit.
                </li>
              </ul>
            </div>
          </div>
          <div
            className="g"
          >
            <div
              className="g--4 css-1vvidun"
            />
            <div
              className="g--2"
            >
              <button
                className="btn css-1mfq5q8"
                disabled={true}
                onClick={[Function]}
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
          <p
            className="t--subinfo"
            style={
              Object {
                "marginTop": "8rem",
              }
            }
          >
            The City of Boston may use, distribute, reproduce, modify, adapt, and publicly display content you submit for the purpose of improving City services and related efforts. Submitted content is also subject to the provisions of
             
            <a
              href="http://www.sec.state.ma.us/pre/preinformation.htm"
              rel="noopener noreferrer"
              target="_blank"
            >
              Massachusetts Public Records Law
            </a>
             
            and may be publicly released as open data under a
             
            <a
              href="https://opendatacommons.org/licenses/pddl/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Public Domain Dedication and License
            </a>
            .
          </p>
        </div>
      </div>
    </div>
    <footer
      className="ft"
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    <div class=\\"ft-c\\">
      <ul class=\\"ft-ll ft-ll--r\\">
        <li class=\\"ft-ll-i\\"><a href=\\"http://www.cityofboston.gov/311/\\" class=\\"ft-ll-a lnk--yellow\\"><span class=\\"ft-ll-311\\">BOS:311</span><span class=\\"tablet--hidden\\"> - </span>Report an issue</a></li>
      </ul>
      

<ul class=\\"ft-ll\\"><li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/innovation-and-technology/privacy-and-security-statement\\" target=\\"_blank\\" title=\\"\\" class=\\"ft-ll-a\\">Privacy Policy</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/human-resources/career-center\\" title=\\"\\" class=\\"ft-ll-a\\">Careers</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/mayors-office/contact-boston-city-hall\\" title=\\"\\" class=\\"ft-ll-a\\">Contact us</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/digital-team/city-boston-alerts-and-notifications\\" title=\\"\\" class=\\"ft-ll-a\\">Alerts and notifications</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/public-records\\" title=\\"\\" class=\\"ft-ll-a\\">Public records requests</a></li>
</ul>    </div>
  ",
        }
      }
      style={
        Object {
          "position": "relative",
          "zIndex": 2,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots FormPage loading 1`] = `
<div
  className="mn"
>
  <div>
    <div
      className="mn css-kchujm"
    >
      <div
        className="b"
      >
        <div
          className="b-c"
        >
          <div
            className="sh sh--y"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <h2
                className="sh-title"
              >
                Help teach the new BOS:311
              </h2>
            </a>
          </div>
          <div
            className="t--intro m-v300"
          >
            Please make up 3 situations that could be solved by reporting:
          </div>
          <div
            className="p-a500 m-v500 css-174pr51"
          >
            <div
              className="t--intro"
            >
              <strong>
                Dead Animal Pick-up on Public Way
              </strong>
            </div>
            <div
              className="t--info"
            >
              Remove a dead animal from a public street or sidewalk.
            </div>
            <div
              className="t--info  css-cfrxbd"
            >
              <a
                href="javascript:void(0)"
                onClick={[Function]}
              >
                I don’t understand this service
              </a>
            </div>
          </div>
          <div
            className="g"
          >
            <div
              className="g--6"
            >
              <div
                className="g--12 m-b500"
              >
                <label
                  className="stp m-v200"
                  htmlFor="description-1"
                >
                  <span
                    className="stp-number"
                    style={
                      Object {
                        "lineHeight": 1.2,
                      }
                    }
                  >
                    1
                  </span>
                   
                  What can we help with?
                </label>
                <div
                  className="txt"
                >
                  <textarea
                    className="txt-f css-5axqd"
                    id="description-1"
                    onChange={[Function]}
                    rows="3"
                    value=""
                  />
                </div>
              </div>
              <div
                className="g--12 m-b500"
              >
                <label
                  className="stp m-v200"
                  htmlFor="description-2"
                >
                  <span
                    className="stp-number"
                    style={
                      Object {
                        "lineHeight": 1.2,
                      }
                    }
                  >
                    2
                  </span>
                   
                  What can we help with?
                </label>
                <div
                  className="txt"
                >
                  <textarea
                    className="txt-f css-5axqd"
                    id="description-2"
                    onChange={[Function]}
                    rows="3"
                    value=""
                  />
                </div>
              </div>
              <div
                className="g--12 m-b500"
              >
                <label
                  className="stp m-v200"
                  htmlFor="description-3"
                >
                  <span
                    className="stp-number"
                    style={
                      Object {
                        "lineHeight": 1.2,
                      }
                    }
                  >
                    3
                  </span>
                   
                  What can we help with?
                </label>
                <div
                  className="txt"
                >
                  <textarea
                    className="txt-f css-5axqd"
                    id="description-3"
                    onChange={[Function]}
                    rows="3"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              className="g--6 css-1x739n4"
            >
              <ul
                className="ul css-1r1mokn"
              >
                <li
                  className="css-3ht2du"
                >
                  Describe each scenario as if you were typing an answer to the question “what can we help with?”
                </li>
                <li
                  className="css-3ht2du"
                >
                  Use different words for each description. For example, if you say “crack in the road” for one, use “hole in the street” for another.
                </li>
                <li
                  className="css-3ht2du"
                >
                  Don’t worry too much about grammar or spelling. Be natural!
                </li>
                <li
                  className="css-3ht2du"
                >
                  If you can’t come up with 3 different ones, that’s okay! Write as much as you can, and then click submit.
                </li>
              </ul>
            </div>
          </div>
          <div
            className="g"
          >
            <div
              className="g--4 css-1vvidun"
            />
            <div
              className="g--2"
            >
              <button
                className="btn css-1mfq5q8"
                disabled={true}
                onClick={[Function]}
                type="submit"
              >
                Submit
              </button>
            </div>
          </div>
          <p
            className="t--subinfo"
            style={
              Object {
                "marginTop": "8rem",
              }
            }
          >
            The City of Boston may use, distribute, reproduce, modify, adapt, and publicly display content you submit for the purpose of improving City services and related efforts. Submitted content is also subject to the provisions of
             
            <a
              href="http://www.sec.state.ma.us/pre/preinformation.htm"
              rel="noopener noreferrer"
              target="_blank"
            >
              Massachusetts Public Records Law
            </a>
             
            and may be publicly released as open data under a
             
            <a
              href="https://opendatacommons.org/licenses/pddl/"
              rel="noopener noreferrer"
              target="_blank"
            >
              Public Domain Dedication and License
            </a>
            .
          </p>
        </div>
      </div>
    </div>
    <footer
      className="ft"
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    <div class=\\"ft-c\\">
      <ul class=\\"ft-ll ft-ll--r\\">
        <li class=\\"ft-ll-i\\"><a href=\\"http://www.cityofboston.gov/311/\\" class=\\"ft-ll-a lnk--yellow\\"><span class=\\"ft-ll-311\\">BOS:311</span><span class=\\"tablet--hidden\\"> - </span>Report an issue</a></li>
      </ul>
      

<ul class=\\"ft-ll\\"><li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/innovation-and-technology/privacy-and-security-statement\\" target=\\"_blank\\" title=\\"\\" class=\\"ft-ll-a\\">Privacy Policy</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/human-resources/career-center\\" title=\\"\\" class=\\"ft-ll-a\\">Careers</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/mayors-office/contact-boston-city-hall\\" title=\\"\\" class=\\"ft-ll-a\\">Contact us</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/digital-team/city-boston-alerts-and-notifications\\" title=\\"\\" class=\\"ft-ll-a\\">Alerts and notifications</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/public-records\\" title=\\"\\" class=\\"ft-ll-a\\">Public records requests</a></li>
</ul>    </div>
  ",
        }
      }
      style={
        Object {
          "position": "relative",
          "zIndex": 2,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots IndexPage index page 1`] = `
<div
  className="mn"
>
  <div>
    <div
      className="mn css-kchujm"
    >
      <div
        className="b"
      >
        <div
          className="b-c"
        >
          <div
            className="sh sh--y"
          >
            <h2
              className="sh-title"
            >
              Help teach the new BOS:311
            </h2>
          </div>
          <div
            className="m-v400 t--intro"
          >
            The City of Boston is working on a new website for 
             
            <a
              href="https://311.boston.gov/"
            >
              BOS:311
            </a>
            . This new site will use automated text analysis to help route your cases. But, we need your help before we can launch.
          </div>
          <div
            className="g"
          >
            <div
              className="g--8 css-1f72rj8"
            >
              <p>
                We need you to help train the new algorithm by describing hypothetical 311 cases in your own words. For example, if we show you “Broken Sidewalk,” you could say:
              </p>
              <ul
                className="ul"
              >
                <li>
                  “The sidewalk in front of my house is cracked,” or
                </li>
                <li>
                  “a tree is pushing up the bricks along Charles St.”
                </li>
              </ul>
              <p>
                Every case type you describe will help us make the new BOS:311 that much better for the people of Boston!
              </p>
              <p>
                <a
                  href="/about"
                  onClick={[Function]}
                >
                  Learn more about this project
                </a>
                 
                and see more detailed instructions.
              </p>
            </div>
            <div
              className="g--4 css-1vvidun"
            >
              <div
                className="ta-c"
              >
                <a
                  className="btn"
                  href="/form"
                  onClick={[Function]}
                >
                  Let’s get started!
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer
      className="ft"
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    <div class=\\"ft-c\\">
      <ul class=\\"ft-ll ft-ll--r\\">
        <li class=\\"ft-ll-i\\"><a href=\\"http://www.cityofboston.gov/311/\\" class=\\"ft-ll-a lnk--yellow\\"><span class=\\"ft-ll-311\\">BOS:311</span><span class=\\"tablet--hidden\\"> - </span>Report an issue</a></li>
      </ul>
      

<ul class=\\"ft-ll\\"><li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/innovation-and-technology/privacy-and-security-statement\\" target=\\"_blank\\" title=\\"\\" class=\\"ft-ll-a\\">Privacy Policy</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/human-resources/career-center\\" title=\\"\\" class=\\"ft-ll-a\\">Careers</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/mayors-office/contact-boston-city-hall\\" title=\\"\\" class=\\"ft-ll-a\\">Contact us</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/digital-team/city-boston-alerts-and-notifications\\" title=\\"\\" class=\\"ft-ll-a\\">Alerts and notifications</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/public-records\\" title=\\"\\" class=\\"ft-ll-a\\">Public records requests</a></li>
</ul>    </div>
  ",
        }
      }
      style={
        Object {
          "position": "relative",
          "zIndex": 2,
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots ThanksPage index page 1`] = `
<div
  className="mn"
>
  <div>
    <div
      className="mn css-kchujm"
    >
      <div
        className="b"
      >
        <div
          className="b-c"
        >
          <div
            className="sh sh--y"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <h2
                className="sh-title"
              >
                Thank you!
              </h2>
            </a>
          </div>
          <p
            className="t--intro"
          >
            Your help will aid us in making the new BOS:311 a great experience for the people of Boston.
          </p>
          <div
            className="g"
          >
            <div
              className="g--6"
            >
              <p
                className="t--info"
              >
                Want to write some more? Every description helps!
              </p>
            </div>
            <div
              className="g--6 css-1vvidun"
            >
              <div
                className="ta-c"
              >
                <a
                  className="btn"
                  href="/form"
                  onClick={[Function]}
                >
                  Let’s keep going!
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <footer
      className="ft"
      dangerouslySetInnerHTML={
        Object {
          "__html": "
    <div class=\\"ft-c\\">
      <ul class=\\"ft-ll ft-ll--r\\">
        <li class=\\"ft-ll-i\\"><a href=\\"http://www.cityofboston.gov/311/\\" class=\\"ft-ll-a lnk--yellow\\"><span class=\\"ft-ll-311\\">BOS:311</span><span class=\\"tablet--hidden\\"> - </span>Report an issue</a></li>
      </ul>
      

<ul class=\\"ft-ll\\"><li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/innovation-and-technology/privacy-and-security-statement\\" target=\\"_blank\\" title=\\"\\" class=\\"ft-ll-a\\">Privacy Policy</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/human-resources/career-center\\" title=\\"\\" class=\\"ft-ll-a\\">Careers</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/mayors-office/contact-boston-city-hall\\" title=\\"\\" class=\\"ft-ll-a\\">Contact us</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/digital-team/city-boston-alerts-and-notifications\\" title=\\"\\" class=\\"ft-ll-a\\">Alerts and notifications</a></li>
<li class=\\"ft-ll-i\\"><a href=\\"https://www.boston.gov/departments/public-records\\" title=\\"\\" class=\\"ft-ll-a\\">Public records requests</a></li>
</ul>    </div>
  ",
        }
      }
      style={
        Object {
          "position": "relative",
          "zIndex": 2,
        }
      }
    />
  </div>
</div>
`;
